<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2025, Scrolless
     All rights reserved.
-->
<resources>
    <string name="app_name" translatable="false">Scrolless</string>
    <string name="github_url" translatable="false">https://github.com/duartebarbosadev/scrolless</string>

    <string name="app_exit_label">Press BACK again to exit</string>

    <string name="duration">Duration</string>

    <string name="accessibility_service_description">This service detects when reels/shorts are opened so that Scrolless, can block them if configured.</string>
    <string name="block_all">Block\nall</string>
    <string name="daily_limit">Daily\nLimit</string>
    <string name="temporary_unblock">Temporary\nUnblock</string>
    <string name="interval_timer">Interval\nTimer</string>
    <string name="timer_content_description">Elapsed Time</string>
    <string name="accessibility_settings_toast">Please enable Scrolless in the Accessibility settings.</string>
    <string name="help">Help</string>
    <string name="help_button">Help Button</string>

    <string name="total_time_wasted">Total time wasted in brain rot</string>
    <string name="show_timer_overlay">Show Timer Overlay</string>
    <string name="rate_scrolless">Rate Scrolless on Play Store</string>
    <string name="pause">Pause</string>

    <string name="feature_coming_soon">Feature coming soon</string>
    <string name="config_daily_limit_time">Configure Daily Limit Time</string>
    <string name="time_track_limit">%1$s/%2$s</string>
    <string name="time_track">%1$s</string>
    
    <!-- Step numbers - non-translatable -->
    <string name="step_one" translatable="false">1</string>
    <string name="step_two" translatable="false">2</string>
    <string name="step_three" translatable="false">3</string>

    <!-- Accessibility Explainer Dialog -->
    <string name="accessibility_explainer_icon_description">Accessibility Permission Icon</string>
    <string name="accessibility_explainer_title">We Need Accessibility Access</string>
    <string name="accessibility_explainer_subtitle">Scrolless needs accessibility access to detect and stop short videos.</string>
    <string name="accessibility_explainer_step1">Tap \"Go to Settings\" below to open Android\'s Accessibility settings</string>
    <string name="accessibility_explainer_step2">Find applications and tap on \"Scrolless\" in the list of services</string>
    <string name="accessibility_explainer_step3">Toggle the switch to ON to enable Scrolless to help you stop endless scrolling</string>
    <string name="accessibility_explainer_privacy_note">We value your privacy. Scrolless only uses this permission to detect and stop short form content. We don\'t collect any personal information.</string>
     <string name="accessibility_explainer_open_source">Our code is 100\% open source on GitHub.</string>
    <string name="accessibility_explainer_proceed_button">Go to Settings</string>
    <string name="accessibility_explainer_not_now_button">Not Now</string>

    <!-- Help Dialog -->
    <string name="help_dialog_title">Scrolless not working?</string>
    <string name="go_to_accessibility_settings">Go to Accessibility Settings</string>
    <string name="help_step1_title">Choose Your Block Option</string>
    <string name="help_step1_description">Select one of the blocking options from the main screen</string>
    <string name="help_step2_title">Troubleshooting</string>
    <string name="help_step2_description">If blocking isn\'t working, disable and then enable the accessibility service and try to disable battery optimization for Scrolless.</string>
    <string name="help_step3_title">Contact Support</string>
    <string name="help_step3_description">Still having issues? We\'re here to help! Use the button below to reach out on our GitHub repo.</string>
    <string name="visit_github">Visit GitHub Repository</string>
    <string name="leave_app_review">Leave App Review</string>
    <string name="icons8_attribution">Icons provided by Icons8 (icons8.com)</string>
    <string name="close">Close</string>
    <string name="contact_support">Contact Support</string>


    <string name="error_accessibility_settings_unavailable">Could not open Accessibility Settings.</string>
    <string name="error_unknown">An unexpected error occurred.</string>

    <string name="get_started">Let\'s Get Started</string>
    <string name="accessibility_success_title">All Set!</string>
    <string name="accessibility_success_description">Scrolless is now ready!</string>
    <string name="success_icon_desc">Success checkmark icon</string>
    <string name="next_steps_title">Next Steps</string>
    <string name="next_step_1">Select a blocking mode</string>
    <string name="next_step_2">Try the daily limit feature and activate the timer overlay</string>
</resources>